# iam-testing

./: .gitignore  .windsurfrules  README.md  pyproject.toml  sepc.md
docs/: iam-smoke-workflow.md
iam_smoke/: cli.py  config.py  setup.py  tester.py
tests/: manual.py  test_ec2_describe_should_pass.py  test_iam_create_admin_role_should_fail.py  test_iam_create_admin_role_without_boundary_should_fail.py  test_iam_list_roles_should_succeed.py  test_iam_pipeline_boundary_modify_should_fail.py  test_s3_get_should_fail.py  test_s3_get_should_succeed.py  test_s3_list_should_succeed.py  test_ssm_parameter_create_should_fail.py  test_ssm_parameter_create_should_succeed.py  test_ssm_parameter_region_should_fail.py
