[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iam-smoke"
version = "0.1.0"
description = "AWS IAM smoke testing framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["boto3>=1.26.0", "pytest>=7.0.0"]

[project.scripts]
iam-smoke = "iam_smoke.cli:main"

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "live: marks tests that run against live AWS (slow, requires credentials)",
]
filterwarnings = ["ignore::DeprecationWarning:botocore.*:"]
